testdata/parser/positive/20.pdl
#version 100

primitive main(in a) {
	int[] x = {1,2,3};
	x[1] = (x[0] < x[2] ? x[1:2] : x[0:1])[0:0][0];
	x[1] = x[1][0:1];
}